# tensorflow-python

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  dataset_transpose.txt  pyproject.toml  pyrightconfig.json  requirements.in  requirements_lock.txt
src/lib/: BUILD  haberdasher.py
src/lib/tests/: haberdasher_test.py
src/time_series_forecasting/: BUILD  dataset.py  main.py  model.py  window_generator.py
src/time_series_forecasting/tests/: dataset_test.py  example_test.py  model_test.py  window_generator_test.py
tests/another_test/: BUILD  pytest_test.py  unittest_test.py
